# template_redacted_report

./: .gitignore  .zenodo.json  AGENTS.md  CITATION.cff  README.md  STANDALONE.md  TODO.md  codemeta.json  domain_profile.yaml  experiment_plan.yaml  pyproject.toml
.agents/: AGENTS.md
.agents/skills/: AGENTS.md
data/: AGENTS.md  README.md  claim_ledger.yaml  example_segments.json
manuscript/: 00_abstract.md  01_methods.md  02_results.md  AGENTS.md  README.md  config.yaml  config.yaml.example  layer_contract.yaml  preamble.md  references.bib
output/.checkpoints/: pipeline_checkpoint.json
output/data/: release_ledger.json
output/pdf/: _combined_manuscript.blg  _combined_manuscript.md  _combined_manuscript.tex
output/reports/: artifact_manifest.json  evidence_registry.json  lessons.jsonl  lessons.md  next_run_context.md  output_statistics.json  output_statistics.txt  pause_recommendations.json  pipeline_report.html  pipeline_report.json  pipeline_report.md  redaction_audit.json  telemetry.json  telemetry.txt  test_results.json  test_results.md  validation_report.json  validation_report.md
output/slides/: 00_abstract_slides.tex  01_methods_slides.nav  01_methods_slides.snm  01_methods_slides.tex  02_results_slides.nav  02_results_slides.snm  02_results_slides.tex
scripts/: 01_generate_release_artifacts.py  AGENTS.md  README.md  generate_dev_variants.py  verify_dev_variants.py
src/: AGENTS.md  README.md  __init__.py
tests/: AGENTS.md  README.md  __init__.py  test_redaction.py  test_release_artifacts.py  test_visuals_coverage.py  test_visuals_proofs.py
(+47 files in other folders)
