[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "template_redacted_report"
version = "0.1.0"
description = "Redacted release report and disclosure-control exemplar"
authors = [{name = "Research Template Author", email = "author@research-template.org"}]
requires-python = ">=3.10"
# visuals.py renders proof PDFs with reportlab and re-parses them with pypdf;
# the isolated per-project interpreter needs both (mirrors template_pitch_deck).
dependencies = [
    "reportlab>=4.0.0",
    "pypdf>=6.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[tool.pytest.ini_options]
pythonpath = [".", "src"]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"

[tool.coverage.run]
source = ["src"]
branch = true
omit = ["tests/*", "*/__init__.py", "*/test_*.py"]

[tool.coverage.report]
fail_under = 90
show_missing = true
precision = 2
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[tool.uv]
